--- a/lohas_color.yaml
+++ b/lohas_color.yaml
@@ -50,15 +50,16 @@ output:
   - platform: my9231
     id: output_cw2
     channel: 2
-  - platform: custom
+  - platform: template
+    id: cw
     type: float
-    lambda: |-
-      auto *copy = new CopyOutput();
-      copy->channel_a = id(output_cw1);
-      copy->channel_b = id(output_cw2);
-      return {copy}; 
-    outputs:
-    - id: cw
+    write_action:
+      - output.set_level:
+          id: output_cw1
+          level: !lambda 'return state;'
+      - output.set_level:
+          id: output_cw2
+          level: !lambda 'return state;'
 
 light:
   - platform: rgbw
